Add Initial Commit

--- a/text-area/index.html
+++ b/text-area/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="login-form.html" method="post">
+    <form action="html.file" method="post">
         <textarea placeholder="text goes here..."></textarea>
         <button type="submit">submit</button>
         <button type="reset">reset</button>
