Add Initial Commit

--- a/Website/index.html
+++ b/Website/index.html
@@ -9,8 +9,8 @@
     <h1><u>Toushif Ansari</u></h1> 
     <a href="https://google.com" target="_blank">home</a>&nbsp;
     <a href="https://google.com" target="_blank">about us</a>&nbsp;
-    <a href="https://github.com" target="_blank">content</a>  
-    <a href="https://google.com" target="_blank">help center</a> 
+    <a href="https://github.com" target="_blank">contect</a>  
+    <a href="https://github.com" target="_blank">help center</a> 
     <hr/>
     <pre>
         life is so beutiful,
