--- a/Website/index.html
+++ b/Website/index.html
@@ -12,10 +12,16 @@
     <a href="https://github.com" target="_blank">contect</a>  
     <a href="https://github.com" target="_blank">help center</a> 
     <hr/>
-    <pre>
+    <img src="https://images.unsplash.com/photo-1560707303-4e980ce876ad?w=200&auto=format&fit=crop&q=10&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c291cmNlfGVufDB8fDB8fHww" class="ceteralign" alt="remote image">
+    <pre class="quote">
         life is so beutiful,
-        please save it.
+            please save it.
     </pre>
-    <img src="https://images.unsplash.com/photo-1560707303-4e980ce876ad?w=200&auto=format&fit=crop&q=10&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c291cmNlfGVufDB8fDB8fHww" alt="remote image">
+    <img src="https://images.unsplash.com/photo-1519068737630-e5db30e12e42?w=200&auto=format&fit=crop&q=10&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8c291cmNlfGVufDB8fDB8fHww" class="ceteralign" alt="remote image">
+    <pre class="quote">
+        A bright sunrise cames 
+          every dark night.
+    </pre>
+    
 </body>
 </html>
