--- a/Website/index.html
+++ b/Website/index.html
@@ -8,19 +8,21 @@
 <body>
     
     <h1><u>Toushif Ansari</u></h1> 
-    <a href="https://google.com" target="_blank">home</a>&nbsp;
-    <a href="https://google.com" target="_blank">about us</a>&nbsp;
-    <a href="https://github.com" target="_blank">contect</a>  
-    <a href="https://github.com" target="_blank">help center</a> 
+    <a href="https://google.com" target="_blank" class="link">home</a> &nbsp;
+    <a href="https://google.com" target="_blank" class="link">about us</a> &nbsp;
+    <a href="https://github.com" target="_blank" class="link">contect</a> &nbsp; 
+    <a href="https://github.com" target="_blank" class="link">help center</a> &nbsp;
     <hr/>
-    <img src="https://images.unsplash.com/photo-1550258987-190a2d41a8ba?w=80&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZnJ1aXR8ZW58MHx8MHx8fDA%3D" class="centeralign" alt="remote image"><br><br>
-    <input type="button" value="$2" class="price"><br><br>
-    <img src="https://images.unsplash.com/photo-1557800636-894a64c1696f?w=80&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8ZnJ1aXR8ZW58MHx8MHx8fDA%3D" class="centeralign" alt="remote image"><br><br>
-    <input type="button" value="$1" class="price"><br><br>
-    <img src="https://images.unsplash.com/photo-1600423115367-87ea7661688f?w=80&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fGZydWl0fGVufDB8fDB8fHww" class="centeralign" alt="remote image"><br><br>
-    <input type="button" value="$1" class="price"><br><br>
-    <img src="https://images.unsplash.com/photo-1528821128474-27f963b062bf?w=100&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fGZydWl0fGVufDB8fDB8fHww" class="centeralign" alt="remote image"><br><br>
-    <input type="button" value="$1" class="price"><br><br><br><br><br>
+    <form action="https://google.com" method="get">
+        <img src="https://images.unsplash.com/photo-1550258987-190a2d41a8ba?w=80&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZnJ1aXR8ZW58MHx8MHx8fDA%3D" class="centeralign" alt="remote image" width="80" height="120"><br><br>
+        <button type="button" class="price"> sale : $2 </button><br><br>
+        <img src="https://images.unsplash.com/photo-1557800636-894a64c1696f?w=80&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8ZnJ1aXR8ZW58MHx8MHx8fDA%3D" class="centeralign" alt="remote image" width="80" height="100"><br><br>
+        <button type="button" class="price"> sale : $2 </button><br><br>
+        <img src="https://images.unsplash.com/photo-1600423115367-87ea7661688f?w=80&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fGZydWl0fGVufDB8fDB8fHww" class="centeralign" alt="remote image" width="80" height="90"><br><br>
+        <button type="button" class="price"> sale : $2 </button><br><br>
+        <img src="https://images.unsplash.com/photo-1528821128474-27f963b062bf?w=100&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fGZydWl0fGVufDB8fDB8fHww" class="centeralign" alt="remote image" width="80" height="60"><br><br>
+        <button type="button" class="price"> sale : $2 </button><br><br><br><br><br>
+    </form>
 
 </body>
 </html>
