--- a/Website/index.html
+++ b/Website/index.html
@@ -6,14 +6,16 @@
     <title>Website</title>
 </head>
 <body>
-    
-    <h1><u>Toushif Ansari</u></h1> 
-    <a href="https://google.com" target="_blank" class="link">home</a> &nbsp;
-    <a href="https://google.com" target="_blank" class="link">about us</a> &nbsp;
-    <a href="https://github.com" target="_blank" class="link">contect</a> &nbsp; 
-    <a href="https://github.com" target="_blank" class="link">help center</a> &nbsp;
-    <hr/>
+    <header>
+        <h1>Toushif Ansari</h1> 
+        <a href="https://google.com" target="_blank" class="link">Home</a> &nbsp;
+        <a href="https://google.com" target="_blank" class="link">About us</a> &nbsp;
+        <a href="https://github.com" target="_blank" class="link">Contect</a> &nbsp; 
+        <a href="https://github.com" target="_blank" class="link">Help Center</a> &nbsp;
+        <hr/>
+    </header>
     <form action="https://google.com" method="get">
+        <p>WELCOME TO WEBSITE</p>
         <img src="https://images.unsplash.com/photo-1550258987-190a2d41a8ba?w=80&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZnJ1aXR8ZW58MHx8MHx8fDA%3D" class="centeralign" alt="remote image" width="80" height="120"><br><br>
         <button type="button" class="price"> sale : $2 </button><br><br>
         <img src="https://images.unsplash.com/photo-1557800636-894a64c1696f?w=80&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8ZnJ1aXR8ZW58MHx8MHx8fDA%3D" class="centeralign" alt="remote image" width="80" height="100"><br><br>
@@ -23,6 +25,13 @@
         <img src="https://images.unsplash.com/photo-1528821128474-27f963b062bf?w=100&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fGZydWl0fGVufDB8fDB8fHww" class="centeralign" alt="remote image" width="80" height="60"><br><br>
         <button type="button" class="price"> sale : $2 </button><br><br><br><br><br>
     </form>
-
+    <footer>
+        <hr>
+        <pre>
+            contact :
+            toushif1611@gmail.com
+            https://github.com/ToushifA-1611/
+        </pre>
+    </footer>
 </body>
 </html>
