Add Initial Commit

--- a/Website/index.html
+++ b/Website/index.html
@@ -28,9 +28,17 @@
     <footer>
         <hr>
         <pre>
-            contact :
-            toushif1611@gmail.com
+
+            contact :                                           Facebook:               Instagram:
+            toushif1611@gmail.com                               Twiter:
             https://github.com/ToushifA-1611/
+
+
+
+
+
+
+            
         </pre>
     </footer>
 </body>
