--- a/Website/index.html
+++ b/Website/index.html
@@ -14,7 +14,7 @@
         <a href="https://github.com" target="_blank" class="link">Help Center</a> &nbsp;
         <hr/>
     </header>
-    <form action="https://google.com" method="get">
+    <form action="https://google.com" method="GET">
         <p>WELCOME TO WEBSITE</p>
         <img src="https://images.unsplash.com/photo-1550258987-190a2d41a8ba?w=80&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZnJ1aXR8ZW58MHx8MHx8fDA%3D" class="centeralign" alt="remote image" width="80" height="120"><br><br>
         <button type="button" class="price"> sale : $2 </button><br><br>
