Add Initial Commit

--- a/Website/index.html
+++ b/Website/index.html
@@ -38,7 +38,7 @@
 
 
 
-            
+                                                                                            terms and conditions 
         </pre>
     </footer>
 </body>
