Add Initial Commit

--- a/Website/index.html
+++ b/Website/index.html
@@ -10,8 +10,8 @@
         <h1>Toushif Ansari</h1> 
         <a href="https://google.com" target="_blank" class="link">Home</a> &nbsp;
         <a href="https://google.com" target="_blank" class="link">About us</a> &nbsp;
-        <a href="https://github.com" target="_blank" class="link">Contect</a> &nbsp; 
-        <a href="https://github.com" target="_blank" class="link">Help Center</a> &nbsp;
+        <a href="https://github.com/ToushifA-1611/" target="_blank" class="link">Contect</a> &nbsp; 
+        <a href="https://github.com/ToushifA-1611/" target="_blank" class="link">Help Center</a> &nbsp;
         <hr/>
     </header>
     <form action="https://google.com" method="GET">
@@ -27,18 +27,17 @@
     </form>
     <footer>
         <hr>
+        <pre class="above">
+            Company                             Need Help ?                             Contact with Us
+        </pre>
         <pre>
-
-            contact :                                           Facebook:               Instagram:
-            toushif1611@gmail.com                               Twiter:
-            https://github.com/ToushifA-1611/
-
+        
+            About Us                            View Help Center                        https://github.com/ToushifA-1611/
+            Careers                             Share Feedback                          https://instagram.com/superior_777_6/
 
 
-
-
-
-                                                                                            terms and conditions 
+            © 2023 created. All Right Reserved.
+            Term of Use   Privacy Policy    FAQ  
         </pre>
     </footer>
 </body>
