--- a/Website/index.html
+++ b/Website/index.html
@@ -6,27 +6,35 @@
     <title>Website</title>
 </head>
 <body>
+
     <header>
         <h1>Toushif Ansari</h1> 
-        <a href="https://google.com" target="_blank" class="link">Home</a> &nbsp;
-        <a href="https://google.com" target="_blank" class="link">About us</a> &nbsp;
-        <a href="https://github.com/ToushifA-1611/" target="_blank" class="link">Contect</a> &nbsp; 
-        <a href="https://github.com/ToushifA-1611/" target="_blank" class="link">Help Center</a> &nbsp;
-        <hr/>
+
+        <input type="button" value="Log in">
+        <input type="button" value="Sign up">
+
+        <hr>
     </header>
+
     <form action="https://google.com" method="GET">
         <p>WELCOME TO WEBSITE</p>
+
         <img src="https://images.unsplash.com/photo-1550258987-190a2d41a8ba?w=80&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZnJ1aXR8ZW58MHx8MHx8fDA%3D" class="centeralign" alt="remote image" width="80" height="120"><br><br>
         <button type="button" class="price"> sale : $2 </button><br><br>
+
         <img src="https://images.unsplash.com/photo-1557800636-894a64c1696f?w=80&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8ZnJ1aXR8ZW58MHx8MHx8fDA%3D" class="centeralign" alt="remote image" width="80" height="100"><br><br>
         <button type="button" class="price"> sale : $2 </button><br><br>
+
         <img src="https://images.unsplash.com/photo-1600423115367-87ea7661688f?w=80&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fGZydWl0fGVufDB8fDB8fHww" class="centeralign" alt="remote image" width="80" height="90"><br><br>
         <button type="button" class="price"> sale : $2 </button><br><br>
+
         <img src="https://images.unsplash.com/photo-1528821128474-27f963b062bf?w=100&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fGZydWl0fGVufDB8fDB8fHww" class="centeralign" alt="remote image" width="80" height="60"><br><br>
         <button type="button" class="price"> sale : $2 </button><br><br><br><br><br>
     </form>
+
     <footer>
         <hr>
+
         <pre class="above">
             Company                             Need Help ?                             Contact with Us
         </pre>
@@ -40,5 +48,6 @@
             Term of Use   Privacy Policy    FAQ  
         </pre>
     </footer>
+
 </body>
 </html>
