Add Initial Commit

--- a/login-form/index.html
+++ b/login-form/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>login form</h1>
-    <form action="login-form" method="post">
+    <form action="/HTML-files/Website/index.html" method="post">
         <input type="text" placeholder="Full Name"></input><br/><br/>
         <input type="email" placeholder="Email ID"></input><br/><br/>
         <button type="submit">submit</button>
