--- a/Website/index.html
+++ b/Website/index.html
@@ -15,19 +15,12 @@
         </form>
         <hr>
     </header>
+
+    <form action="" method="get" class="mainbody">
         <p>WELCOME TO WEBSITE</p>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </form>
 
-        <img src="https://images.unsplash.com/photo-1550258987-190a2d41a8ba?w=80&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZnJ1aXR8ZW58MHx8MHx8fDA%3D" class="centeralign" alt="remote image" width="80" height="120"><br><br>
-        <input type="button" value=" sale : $2" class="price"><br><br>
-
-        <img src="https://images.unsplash.com/photo-1557800636-894a64c1696f?w=80&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8ZnJ1aXR8ZW58MHx8MHx8fDA%3D" class="centeralign" alt="remote image" width="80" height="100"><br><br>
-        <input type="button" value=" sale : $2" class="price"><br><br>
-
-        <img src="https://images.unsplash.com/photo-1600423115367-87ea7661688f?w=80&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fGZydWl0fGVufDB8fDB8fHww" class="centeralign" alt="remote image" width="80" height="90"><br><br>
-        <input type="button" value=" sale : $2" class="price"><br><br>
-
-        <img src="https://images.unsplash.com/photo-1528821128474-27f963b062bf?w=100&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fGZydWl0fGVufDB8fDB8fHww" class="centeralign" alt="remote image" width="80" height="60"><br><br>
-        <input type="button" value=" sale : $2" class="price"><br><br><br><br><br>
     <footer>
         <hr>
 
