Add Initial Commit

--- a/Website/index.html
+++ b/Website/index.html
@@ -9,7 +9,7 @@
 
     <header>
         <h1>Toushif Ansari</h1> 
-        <form action="/HTML-files/login-form/index.html" method="post">
+        <form action="/HTML-files/login-form/index.html" method="get">
             <button type="submit">Log in</button>
             <button type="submit">Sign up</button>
         </form>
